WebCore:

Reviewed by Eric Seidel.

        Patch for http://bugs.webkit.org/show_bug.cgi?id=16758
        ASSERT when using TreeWalker methods for a current node outside of the root (Acid3)

        - Ensure that returned nodes are within the root node, or return 0, in adherence with the spec.

        Test: fast/dom/TreeWalker/TreeWalker-currentNode.html

        * dom/TreeWalker.cpp:
        (WebCore::TreeWalker::parentNode):
        (WebCore::TreeWalker::firstChild):
        (WebCore::TreeWalker::lastChild):
        (WebCore::TreeWalker::previousSibling):
        (WebCore::TreeWalker::nextSibling):
        (WebCore::TreeWalker::previousNode):
        (WebCore::TreeWalker::nextNode):

LayoutTests:

        Reviewed by Eric Seidel.

        Test for http://bugs.webkit.org/show_bug.cgi?id=16758
        ASSERT when using TreeWalker methods for a current node outside of the root (Acid3)

        * fast/dom/TreeWalker: Added.
        * fast/dom/TreeWalker/TreeWalker-currentNode.html: Added.
        * fast/dom/TreeWalker/resources: Added.
        * fast/dom/TreeWalker/resources/TreeWalker-currentNode.js: Added.



Canonical link: https://commits.webkit.org/23041@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29203 268f45cc-cd09-0410-ab3c-d52691b4dbfc