WebCore/dom/TreeWalker.cpp
@@ -58,93 +58,79 @@ void TreeWalker::setCurrentNode(Node* node)
 
 Node* TreeWalker::parentNode()
 {
-    Node* result = 0;
-    for (Node* node = currentNode()->parentNode(); node && node != root(); node = node->parentNode()) {
+    for (Node* node = currentNode()->parentNode(); node && (node == root() || node->isDescendantOf(root())); node = node->parentNode()) {
         if (acceptNode(node) == NodeFilter::FILTER_ACCEPT) {
             setCurrentNode(node);
-            result = node;
-            break;
+            return node;
         }
     }
-    return result;
+    return 0;
 }
 
 Node* TreeWalker::firstChild()
 {
-    Node* result = 0;
-    for (Node* node = currentNode()->firstChild(); node; node = node->nextSibling()) {
+    for (Node* node = currentNode()->firstChild(); node && (node == root() || node->isDescendantOf(root())); node = node->nextSibling()) {
         if (acceptNode(node) == NodeFilter::FILTER_ACCEPT) {
             setCurrentNode(node);
-            result = node;
-            break;
+            return node;
         }
     }
-    return result;
+    return 0;
 }
 
 Node* TreeWalker::lastChild()
 {
-    Node* result = 0;
-    for (Node* node = currentNode()->lastChild(); node; node = node->previousSibling()) {
+    for (Node* node = currentNode()->lastChild(); node && (node == root() || node->isDescendantOf(root())); node = node->previousSibling()) {
         if (acceptNode(node) == NodeFilter::FILTER_ACCEPT) {
             setCurrentNode(node);
-            result = node;
-            break;
+            return node;
         }
     }
-    return result;
+    return 0;
 }
 
 Node* TreeWalker::previousSibling()
 {
-    Node* result = 0;
-    for (Node* node = currentNode()->previousSibling(); node; node = node->previousSibling()) {
+    for (Node* node = currentNode()->previousSibling(); node && (node == root() || node->isDescendantOf(root())); node = node->previousSibling()) {
         if (acceptNode(node) == NodeFilter::FILTER_ACCEPT) {
             setCurrentNode(node);
-            result = node;
-            break;
+            return node;
         }
     }
-    return result;
+    return 0;
 }
 
 Node* TreeWalker::nextSibling()
 {
-    Node* result = 0;
-    for (Node* node = currentNode()->nextSibling(); node; node = node->nextSibling()) {
+    for (Node* node = currentNode()->nextSibling(); node && (node == root() || node->isDescendantOf(root())); node = node->nextSibling()) {
         if (acceptNode(node) == NodeFilter::FILTER_ACCEPT) {
             setCurrentNode(node);
-            result = node;
-            break;
+            return node;
         }
     }
-    return result;
+    return 0;
 }
 
 Node* TreeWalker::previousNode()
 {
-    Node* result = 0;
-    for (Node* node = currentNode()->traversePreviousNode(root()); node; node = node->traversePreviousNode(root())) {
+    for (Node* node = currentNode()->traversePreviousNode(); node && (node == root() || node->isDescendantOf(root())); node = node->traversePreviousNode()) {
         if (acceptNode(node) == NodeFilter::FILTER_ACCEPT && !ancestorRejected(node)) {
             setCurrentNode(node);
-            result = node;
-            break;
+            return node;
         }
     }
-    return result;
+    return 0;
 }
 
 Node* TreeWalker::nextNode()
 {
-    Node* result = 0;
-    for (Node* node = currentNode()->traverseNextNode(root()); node; node = node->traverseNextNode(root())) {
+    for (Node* node = currentNode()->traverseNextNode(); node && (node == root() || node->isDescendantOf(root())); node = node->traverseNextNode()) {
         if (acceptNode(node) == NodeFilter::FILTER_ACCEPT && !ancestorRejected(node)) {
             setCurrentNode(node);
-            result = node;
-            break;
+            return node;
         }
     }
-    return result;
+    return 0;
 }
 
 bool TreeWalker::ancestorRejected(const Node* node) const
